Model e Migration do professor, Migration TccDados e AlunoController para Gerir Perfil Aluno

--- a/AgendaTCC/public/css/template.css
+++ b/AgendaTCC/public/css/template.css
@@ -4,7 +4,7 @@ html {
 }
 body {
   margin-bottom: 60px; /* Margin bottom by footer height */
-  background-color: #f2f6f9
+  background-color: #F5F5F5;
 
 }
 .footer {
